# osmin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  osmin-app.in  osmin.appdata.xml.in
.github/workflows/: build_android_arm64_ndk21.yml  build_android_arm64_ndk22.yml  build_android_ndk18.yml  build_android_ndk21.yml  build_android_ndk22.yml  build_android_x64.yml  build_android_x64_ndk22.yml  build_android_x86_ndk21.yml  build_android_x86_ndk22.yml  build_ubuntu_24.yml
android/: .gitignore  AddQtAndroidApk.cmake  AndroidManifest.xml.in  AndroidManifest.xml.in.ndk18  AndroidManifest.xml.in.ndk21  README.txt  build.gradle.in  darwin-build-arm64-qt512.sh  darwin-build-armv7-qt512.sh  darwin-configure-arm64-qt512.sh  darwin-configure-armv7-qt512.sh  linux-build-arm64-qt512.sh  linux-build-arm64-qt515.sh  linux-build-arm64-qt607.sh  linux-build-arm64-qt609.sh  linux-build-armv7-api23-qt512.sh  linux-build-armv7-qt512.sh  linux-build-armv7-qt515.sh  linux-build-armv7-qt607.sh  linux-build-armv7-qt609.sh  linux-build-x64-qt515.sh  linux-build-x64-qt607.sh  linux-build-x64-qt609.sh  linux-build-x86-qt512.sh  linux-build-x86-qt515.sh  linux-build-x86-qt607.sh  linux-build-x86-qt609.sh  linux-configure-arm64-qt512.sh  linux-configure-arm64-qt515.sh  linux-configure-armv7-api23-qt512.sh  linux-configure-armv7-qt509.sh  linux-configure-armv7-qt512.sh  linux-configure-armv7-qt515.sh  linux-configure-x86-qt512.sh  linux-configure-x86-qt515.sh  qtdeploy.json.in  temp.sh  temp2.sh
backend/: CMakeLists.txt  README.txt  libosmscout.1.compat.patch  libosmscout.1.patch  libosmscout.2.patch  libosmscout.3.patch  libosmscout.4.patch  libosmscout.cpp17.patch  libosmscout.patch.1  libosmscout.tiled.patch  libosmscout_4.patch
backend/cmake/: DownloadProject.CMakeLists.cmake.in
cmake/: qtchooser.cmake
gui/: osmin-sfos.pro  osmin.qrc  osmin_controls2.qrc  osmin_controls2_509.qrc  osmin_controls2_515.qrc  osmin_controls2_640.qrc  osmin_controls2_690.qrc  osmin_silica.qrc
gui/controls2/: ConfigureMap.qml  ConfigureVoice.qml  DialogAbout.qml  Favorites.qml  LocationInfo.qml  MainMenu.qml  MapDownloads.qml  MapView.qml  Routing.qml  SearchPlace.qml  Settings.qml  TrackCollection.qml  Tracking.qml  Welcome.qml  osmin.qml
gui/controls2/components/: ActivitySpinner.qml  CompassSensor.qml  DialogAction.qml  DialogAlert.qml  DialogBase.qml  DialogMarkPosition.qml  MapCheckBox.qml  MapIcon.qml  MapListView.qml  MapPage.qml  MapPosition.qml  MapRotator.qml  MapVoice.qml  Navigator.qml  NavigatorInfo.qml  NavigatorRouting.qml  OverlayManager.qml  POIIcon.qml  PhoneLink.qml  PopInfo.qml  PopOver.qml  RouteOverview.qml  ScaleIndicator.qml  SearchField.qml  SimpleListItem.qml  StyleLight.qml  Units.qml  WAYIcon.qml  WebLink.qml
gui/controls2_509/: ConfigureMap.qml  ConfigureVoice.qml  Favorites.qml  MapDownloads.qml  MapView.qml  SearchPlace.qml  TrackCollection.qml  osmin.qml
gui/controls2_509/components/: CompassSensor.qml  MapCheckBox.qml  MapPage.qml  MapPosition.qml  NavigatorInfo.qml  PopInfo.qml  ScaleIndicator.qml  SearchField.qml  WAYIcon.qml
gui/controls2_515/: About.qml  Banner.qml  ConfigureMap.qml  ConfigureVoice.qml  DialogAbout.qml  Favorites.qml  LocationInfo.qml  MainMenu.qml  MapDownloads.qml  MapView.qml  Routing.qml  SearchPlace.qml  Settings.qml  TrackCollection.qml  Tracking.qml  Welcome.qml  osmin.qml
gui/controls2_515/components/: ActivitySpinner.qml  CompassSensor.qml  DialogAction.qml  DialogAlert.qml  DialogBase.qml  DialogEnter.qml  DialogMarkPosition.qml  LaneTurnIcon.qml  LaneTurns.qml  MapCheckBox.qml  MapIcon.qml  MapPosition.qml  MapRotator.qml  MapVoice.qml  Navigator.qml  NavigatorInfo.qml  POIIcon.qml  (+14 more)
gui/controls2_640/: ConfigureMap.qml  ConfigureVoice.qml  LocationInfo.qml  MainMenu.qml  MapDownloads.qml  MapView.qml  Routing.qml  SearchPlace.qml  Settings.qml  TrackCollection.qml  Tracking.qml  osmin.qml
gui/controls2_690/: About.qml  Banner.qml  ConfigureMap.qml  ConfigureVoice.qml  DialogAbout.qml  Favorites.qml  LocationInfo.qml  MainMenu.qml  MapDownloads.qml  MapLoader.qml  MapView.qml  Routing.qml  SearchPlace.qml  Settings.qml  TrackCollection.qml  Tracking.qml  Welcome.qml  osmin.qml
gui/i18n/: README.md  osmin_de.qm  osmin_de.ts  osmin_en.ts  osmin_es.qm  osmin_es.ts  osmin_fr.qm  osmin_fr.ts  osmin_nl.qm  osmin_nl.ts
gui/silica/: Banner.qml  ConfigureMap.qml  CoverPage.qml  DialogAbout.qml  Favorites.qml  LocationInfo.qml  MainMenu.qml  MapDownloads.qml  MapView.qml  Routing.qml  SearchPlace.qml  Settings.qml  TrackCollection.qml  Tracking.qml  Welcome.qml  osmin.qml
resources/: hillshade-tile-server.json.sample  voice-providers.json
resources/stylesheets/: cycle.oss  map.ost  osmin.oss  outdoor.oss  public-transport.oss  standard.oss  winter-sports.oss
resources/world/: basemap.pack
rpm/: harbour-osmin.spec
sailfish/: osmin-silica.pro
sailfish/rpm/: harbour-osmin.spec
simulator/: CMakeLists.txt  README.md  commandline.cpp  commandline.h  globalazimuth.cpp  globalazimuth.h  globalposition.cpp  globalposition.h  gpxrunner.cpp  gpxrunner.h  main.cpp  scriptrunner.cpp  scriptrunner.h  simulatedcompass.cpp  simulatedcompass.h  simulatedpositionsource.cpp  simulatedpositionsource.h  simulatedsensorplugin.cpp  simulatedsensorplugin.h  simulator.cpp  simulator.h  simulatorbreaker.h
src/: compressor.cpp  compressor.h  converter.cpp  converter.h  csvparser.cpp  csvparser.h  elevationchart.cpp  elevationchart.h  favoritesmodel.cpp  favoritesmodel.h  gpxfilemodel.cpp  gpxfilemodel.h  gpxlistmodel.cpp  gpxlistmodel.h  locked.h  mapextras.cpp  mapextras.h  memorymanager.cpp  memorymanager.h  osmin.cpp  pack.cpp  packed.cpp  packed.h  platformextras.cpp  platformextras.h  qmlfilterbehavior.cpp  qmlfilterbehavior.h  qmlsortbehavior.cpp  qmlsortbehavior.h  qmlsortfiltermodel.cpp  qmlsortfiltermodel.h  remote.h  remotecompass.cpp  remotecompass.h  remotepositionsource.cpp  remotepositionsource.h  remoteservice.cpp  remoteservice.h  remotetracker.cpp  remotetracker.h  (+14 more)
src/compass/: genericcompass.cpp  genericcompass.h  plugin.cpp  plugin.h
(+83 files in other folders)
